--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ body {
 }
 
 /* Espaço entre cards */
-#cardMetricas { margin-bottom: 50px; }
+#cardMetricas { 
+    margin-bottom: 50px; 
+    margin-top: 1px;
 
 /* Botão de período */
 #btnPeriodo {
