--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@ body {
 /* Card */
 .card {
     width: 270px;
+    margun-top:3px;
     background: #fff;
     border-radius: 12px;
-    padding: 35px;
+    padding: 25px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.08);
     display: flex;
     flex-direction: column;
@@ -130,10 +131,10 @@ body {
     align-items: center;
     gap: 4px;
     width: 100%;
-    margin-bottom:6px;
+    margin-bottom:5px;
 }
 
-.secao-icon { font-size: 33px; color: #007bff; }
+.secao-icon { font-size: 30px; color: #007bff; }
 
 .titulo { font-weight: bold; font-size: 14px; text-align: center; }
 .valor { font-size: 17px; font-weight: normal; text-align: center; }
