--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body {
     margin-bottom:5px;
 }
 
-.secao-icon { font-size: 30px; color: #007bff; }
+.secao-icon { font-size: 30px; color: #red; }
 
 .titulo { font-weight: bold; font-size: 14px; text-align: center; }
 .valor { font-size: 17px; font-weight: normal; text-align: center; }
