--- a/index.html
+++ b/index.html
@@ -1,160 +1,130 @@
-ok<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vendoo - Dashboard</title>
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-<!-- Bootstrap Icons -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
-<!-- Chart.js -->
+<title>Dashboard com Gráfico</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-body {
-    font-family: 'Inter', sans-serif;
-    margin: 0;
-    padding: 20px;
-    background: #f0f2f5;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+body{
+  margin:0;
+  padding:20px;
+  background:#f3f4f6;
+  font-family:'Inter', sans-serif;
+  color:#0f172a;
+  display:flex;
+  justify-content:center;
 }
 
-/* Dashboard title */
-.titulo-dashboard {
-    font-size: 22px;
-    font-weight: 700;
-    color: #000;
-    margin-bottom: 14px;
-    align-self: flex-start;
+.card{
+    border-radius:10px;
+    background:#fff;
+    box-shadow:0 6px 20px rgba(15,23,42,0.1);
+    padding:16px;
+    width:100%;
+    max-width:380px;
+    display:flex;
+    flex-direction:column;
+    gap:12px;
 }
 
-/* Card */
-.card {
-    width: 270px;
-    margun-top:3px;
-    background: #fff;
-    border-radius: 12px;
-    padding: 25px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    position: relative;
+.titulo-dashboard{
+    font-weight:700;
+    font-size:18px;
+    margin-bottom:12px;
+    text-align:center;
 }
 
-/* Espaço entre cards */
-#cardMetricas { 
-    margin-bottom: 50px; 
-    margin-top: 1px;
-
-/* Botão de período */
-#btnPeriodo {
-    width: 100%;
-    height: 30px;
-    padding: 0 12px;
-    border-radius: 7px;
-    border: 1px solid #ddd;
-    background: #fafafa;
-    font-weight: 600;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    position: relative;
-    margin-bottom:5px;
+/* Dropdown período */
+#btnPeriodo{
+    border:1px solid #ccc;
+    background:#f9f9f9;
+    padding:6px 12px;
+    border-radius:6px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    cursor:pointer;
 }
-
-#btnPeriodo::before {
-    content: "PERÍODO";
-    position: absolute;
-    top: -10px;
-    left: 12px;
-    background: #fff;
-    padding: 0 6px;
-    font-size: 12px;
-    color: #555;
-    font-weight: bold;
+#periodoDrop{
+    display:none;
+    flex-direction:column;
+    border:1px solid #ccc;
+    border-radius:6px;
+    margin-top:4px;
 }
-
-.arrow { transition: transform 0.3s ease; }
-
-/* Dropdown */
-#periodoDrop {
-    display: none;
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 95%;
-    flex-direction: column;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.08);
-    z-index: 10;
-    padding: 7px 0;
+.option{
+    padding:6px 12px;
+    cursor:pointer;
 }
-
-.option {
-    padding: 10px 16px;
-    cursor: pointer;
-    transition: background 0.2s;
-}
-
-.option:hover, .option.selected {
-    background: #e0e0e0;
-}
-
-#btnCalendario {
-    margin: 8px 16px;
-    padding: 8px;
-    cursor: pointer;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    background: #f9f9f9;
-    text-align: center;
-}
-
+.option.selected{ background:#e2e8f0; }
+#btnCalendario{ padding:6px 12px; cursor:pointer; color:#007bff; }
 #calendarInput { position: absolute; left: -9999px; }
 
 /* Seções verticais */
 .secao {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4px;
-    width: 100%;
-    margin-bottom:5px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:4px;
 }
-
-.secao-icon { font-size: 30px; color: #red; }
-
-.titulo { font-weight: bold; font-size: 14px; text-align: center; }
-.valor { font-size: 17px; font-weight: normal; text-align: center; }
+.secao-icon{ font-size:24px; }
+.titulo{ font-weight:bold; font-size:14px; }
+.valor{ font-size:17px; }
 
 /* Cores por seção */
-.faturamento { color: #228B22; }
-.vendas { color: #007bff; }
-.conversao { color: #FFA500; }
-.ticket { color: #8A2BE2; }
+.faturamento{ color:#228B22; }
+.vendas{ color:#007bff; }
+.conversao{ color:#FFA500; }
+.ticket{ color:#8A2BE2; }
 
+/* Gráfico */
+.chart-wrap{
+    width:100%;
+    height:180px;
+    position:relative;
+    margin-top:8px;
+}
+.center-total{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    text-align:center;
+    pointer-events:none;
+}
+.center-total .label{ color:#6b7280; font-size:12px; }
+.center-total .num{ font-weight:700; font-size:16px; margin-top:4px; }
 
+.legend-row{
+    display:flex;
+    gap:12px;
+    justify-content:center;
+    margin-top:6px;
+}
+.legend-item{
+    display:flex;
+    gap:6px;
+    align-items:center;
+    font-size:12px;
+    color:#6b7280;
+    cursor:pointer;
+}
+.legend-swatch{
+    width:10px;
+    height:10px;
+    border-radius:2px;
+}
 </style>
 </head>
 <body>
 
-<div class="titulo-dashboard">Dashboard</div>
+<div class="card">
+    <div class="titulo-dashboard">Dashboard</div>
 
-<!-- Card de métricas -->
-<div id="cardMetricas" class="card">
-    <!-- Botão de período -->
+    <!-- Botão período -->
     <div id="btnPeriodo">
         <span id="periodoSelected">Hoje</span>
         <i class="bi bi-chevron-down arrow"></i>
@@ -170,44 +140,52 @@ body {
         <input type="date" id="calendarInput">
     </div>
 
-    <!-- Seções -->
+    <!-- Seções métricas -->
     <div class="secao">
         <i class="bi bi-cash-coin secao-icon"></i>
         <div class="titulo">Faturamento</div>
         <div class="valor faturamento">100 MZN</div>
     </div>
-
     <div class="secao">
         <i class="bi bi-cart-check-fill secao-icon"></i>
         <div class="titulo">Vendas Realizadas</div>
         <div class="valor vendas">50</div>
     </div>
-
     <div class="secao">
         <i class="bi bi-graph-up secao-icon"></i>
         <div class="titulo">Taxa de Conversão</div>
         <div class="valor conversao">6%</div>
     </div>
-
     <div class="secao">
         <i class="bi bi-receipt secao-icon"></i>
         <div class="titulo">Ticket Médio</div>
         <div class="valor ticket">2 MZN</div>
     </div>
+
+    <!-- Gráfico de vendas -->
+    <div class="chart-wrap">
+        <canvas id="doughnutChart"></canvas>
+        <div class="center-total">
+            <div class="label">TOTAL</div>
+            <div class="num" id="centerValue">0 MT</div>
+            <div style="font-size:11px;color:#6b7280;margin-top:4px;">M-Pesa + E-Mola</div>
+        </div>
+    </div>
+
+    <div class="legend-row">
+        <div class="legend-item" data-index="0"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
+        <div class="legend-item" data-index="1"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
+    </div>
 </div>
 
-
-
-
 <script>
-// Dropdown
+// Dropdown período
 const btnPeriodo = document.getElementById("btnPeriodo");
 const periodoDrop = document.getElementById("periodoDrop");
 const options = document.querySelectorAll(".option");
 const periodoSelected = document.getElementById("periodoSelected");
 const btnCalendario = document.getElementById("btnCalendario");
 const calendarInput = document.getElementById("calendarInput");
-let customDateSelected = false;
 
 btnPeriodo.addEventListener("click", () => {
     periodoDrop.style.display = periodoDrop.style.display === "flex" ? "none" : "flex";
@@ -218,7 +196,6 @@ options.forEach(opt => {
         options.forEach(o => o.classList.remove("selected"));
         opt.classList.add("selected");
         periodoSelected.textContent = opt.dataset.value;
-        customDateSelected = false;
         periodoDrop.style.display = "none";
     });
 });
@@ -235,12 +212,54 @@ calendarInput.addEventListener("change", () => {
         const month = String(date.getMonth()+1).padStart(2,'0');
         const year = date.getFullYear();
         periodoSelected.textContent = `${day}/${month}/${year}`;
-        customDateSelected = true;
         options.forEach(o => o.classList.remove("selected"));
         periodoDrop.style.display = "none";
     }
 });
 
+// Gráfico
+const dataValues = [4000, 2400];
+const dataLabels = ['M-Pesa','E-Mola'];
+const total = dataValues.reduce((a,b)=>a+b,0);
+document.getElementById('centerValue').textContent = total+' MT';
+
+const ctx = document.getElementById('doughnutChart').getContext('2d');
+const doughnutChart = new Chart(ctx, {
+    type:'doughnut',
+    data:{
+        labels:dataLabels,
+        datasets:[{
+            data:dataValues,
+            backgroundColor:['#FF4136','#FFA500']
+        }]
+    },
+    options:{
+        cutout:'62%',
+        plugins:{
+            legend:{ display:false },
+            tooltip:{
+                callbacks:{
+                    label: function(context){
+                        const val = context.raw;
+                        const pct = ((val/total)*100).toFixed(1);
+                        return `${context.label}: ${val} MT (${pct}%)`;
+                    }
+                }
+            }
+        },
+        maintainAspectRatio:false
+    }
+});
+
+// Legendinhas clicáveis
+document.querySelectorAll('.legend-item').forEach(item=>{
+  item.addEventListener('click',()=>{
+    const index = item.dataset.index;
+    const meta = doughnutChart.getDatasetMeta(0).data[index];
+    meta.hidden = !meta.hidden;
+    doughnutChart.update();
+  });
+});
 </script>
 
 </body>
