--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard com Gráfico</title>
+<title>Dashboard Compacto</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -16,6 +16,7 @@ body{
   color:#0f172a;
   display:flex;
   justify-content:center;
+  align-items:flex-start;
 }
 
 .card{
@@ -27,13 +28,14 @@ body{
     max-width:380px;
     display:flex;
     flex-direction:column;
-    gap:12px;
+    gap:8px;
 }
 
+/* Título do dashboard */
 .titulo-dashboard{
     font-weight:700;
     font-size:18px;
-    margin-bottom:12px;
+    margin-bottom:8px;
     text-align:center;
 }
 
@@ -41,12 +43,13 @@ body{
 #btnPeriodo{
     border:1px solid #ccc;
     background:#f9f9f9;
-    padding:6px 12px;
+    padding:6px 10px;
     border-radius:6px;
     display:flex;
     justify-content:space-between;
     align-items:center;
     cursor:pointer;
+    font-size:14px;
 }
 #periodoDrop{
     display:none;
@@ -56,23 +59,24 @@ body{
     margin-top:4px;
 }
 .option{
-    padding:6px 12px;
+    padding:6px 10px;
     cursor:pointer;
+    font-size:14px;
 }
 .option.selected{ background:#e2e8f0; }
-#btnCalendario{ padding:6px 12px; cursor:pointer; color:#007bff; }
+#btnCalendario{ padding:6px 10px; cursor:pointer; color:#007bff; font-size:14px; }
 #calendarInput { position: absolute; left: -9999px; }
 
-/* Seções verticais */
+/* Seções métricas */
 .secao {
     display:flex;
     flex-direction:column;
     align-items:center;
-    gap:4px;
+    gap:2px;
 }
-.secao-icon{ font-size:24px; }
-.titulo{ font-weight:bold; font-size:14px; }
-.valor{ font-size:17px; }
+.secao-icon{ font-size:22px; }
+.titulo{ font-weight:bold; font-size:13px; }
+.valor{ font-size:15px; }
 
 /* Cores por seção */
 .faturamento{ color:#228B22; }
@@ -80,12 +84,18 @@ body{
 .conversao{ color:#FFA500; }
 .ticket{ color:#8A2BE2; }
 
+/* Linha de separação */
+.hr-separator{
+    border:none;
+    border-top:1px solid #e2e8f0;
+    margin:8px 0;
+}
+
 /* Gráfico */
 .chart-wrap{
     width:100%;
-    height:180px;
+    height:150px; /* menor altura para caber na tela */
     position:relative;
-    margin-top:8px;
 }
 .center-total{
     position:absolute;
@@ -95,8 +105,8 @@ body{
     text-align:center;
     pointer-events:none;
 }
-.center-total .label{ color:#6b7280; font-size:12px; }
-.center-total .num{ font-weight:700; font-size:16px; margin-top:4px; }
+.center-total .label{ color:#6b7280; font-size:11px; }
+.center-total .num{ font-weight:700; font-size:14px; margin-top:2px; }
 
 .legend-row{
     display:flex;
@@ -162,13 +172,16 @@ body{
         <div class="valor ticket">2 MZN</div>
     </div>
 
+    <!-- Linha de separação -->
+    <hr class="hr-separator">
+
     <!-- Gráfico de vendas -->
     <div class="chart-wrap">
         <canvas id="doughnutChart"></canvas>
         <div class="center-total">
             <div class="label">TOTAL</div>
             <div class="num" id="centerValue">0 MT</div>
-            <div style="font-size:11px;color:#6b7280;margin-top:4px;">M-Pesa + E-Mola</div>
+            <div style="font-size:11px;color:#6b7280;margin-top:2px;">M-Pesa + E-Mola</div>
         </div>
     </div>
 
