--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard Compacto</title>
+<title>Dashboard Separado</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -15,10 +15,12 @@ body{
   font-family:'Inter', sans-serif;
   color:#0f172a;
   display:flex;
-  justify-content:center;
-  align-items:flex-start;
+  flex-direction:column;
+  align-items:center;
+  gap:20px;
 }
 
+/* Cards */
 .card{
     border-radius:10px;
     background:#fff;
@@ -39,34 +41,6 @@ body{
     text-align:center;
 }
 
-/* Dropdown período */
-#btnPeriodo{
-    border:1px solid #ccc;
-    background:#f9f9f9;
-    padding:6px 10px;
-    border-radius:6px;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    cursor:pointer;
-    font-size:14px;
-}
-#periodoDrop{
-    display:none;
-    flex-direction:column;
-    border:1px solid #ccc;
-    border-radius:6px;
-    margin-top:4px;
-}
-.option{
-    padding:6px 10px;
-    cursor:pointer;
-    font-size:14px;
-}
-.option.selected{ background:#e2e8f0; }
-#btnCalendario{ padding:6px 10px; cursor:pointer; color:#007bff; font-size:14px; }
-#calendarInput { position: absolute; left: -9999px; }
-
 /* Seções métricas */
 .secao {
     display:flex;
@@ -84,7 +58,7 @@ body{
 .conversao{ color:#FFA500; }
 .ticket{ color:#8A2BE2; }
 
-/* Linha de separação */
+/* Linha separadora */
 .hr-separator{
     border:none;
     border-top:1px solid #e2e8f0;
@@ -92,9 +66,20 @@ body{
 }
 
 /* Gráfico */
+.chart-card{
+  border-radius:10px;
+  background:#fff;
+  box-shadow:0 6px 20px rgba(15,23,42,0.1);
+  padding:16px;
+  width:100%;
+  max-width:380px;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+}
 .chart-wrap{
     width:100%;
-    height:150px; /* menor altura para caber na tela */
+    height:180px;
     position:relative;
 }
 .center-total{
@@ -131,26 +116,10 @@ body{
 </head>
 <body>
 
+<!-- DIV MÉTRICAS -->
 <div class="card">
-    <div class="titulo-dashboard">Dashboard</div>
+    <div class="titulo-dashboard">Dashboard Métricas</div>
 
-    <!-- Botão período -->
-    <div id="btnPeriodo">
-        <span id="periodoSelected">Hoje</span>
-        <i class="bi bi-chevron-down arrow"></i>
-    </div>
-
-    <!-- Dropdown -->
-    <div id="periodoDrop">
-        <div class="option selected" data-value="Hoje">Hoje</div>
-        <div class="option" data-value="Ontem">Ontem</div>
-        <div class="option" data-value="Últimos 7 dias">Últimos 7 dias</div>
-        <div class="option" data-value="Últimos 30 dias">Últimos 30 dias</div>
-        <div id="btnCalendario">Calendário</div>
-        <input type="date" id="calendarInput">
-    </div>
-
-    <!-- Seções métricas -->
     <div class="secao">
         <i class="bi bi-cash-coin secao-icon"></i>
         <div class="titulo">Faturamento</div>
@@ -171,11 +140,12 @@ body{
         <div class="titulo">Ticket Médio</div>
         <div class="valor ticket">2 MZN</div>
     </div>
+</div>
 
-    <!-- Linha de separação -->
-    <hr class="hr-separator">
+<!-- DIV GRÁFICO -->
+<div class="chart-card">
+    <div class="titulo-dashboard">Gráfico de Vendas</div>
 
-    <!-- Gráfico de vendas -->
     <div class="chart-wrap">
         <canvas id="doughnutChart"></canvas>
         <div class="center-total">
@@ -192,45 +162,6 @@ body{
 </div>
 
 <script>
-// Dropdown período
-const btnPeriodo = document.getElementById("btnPeriodo");
-const periodoDrop = document.getElementById("periodoDrop");
-const options = document.querySelectorAll(".option");
-const periodoSelected = document.getElementById("periodoSelected");
-const btnCalendario = document.getElementById("btnCalendario");
-const calendarInput = document.getElementById("calendarInput");
-
-btnPeriodo.addEventListener("click", () => {
-    periodoDrop.style.display = periodoDrop.style.display === "flex" ? "none" : "flex";
-});
-
-options.forEach(opt => {
-    opt.addEventListener("click", () => {
-        options.forEach(o => o.classList.remove("selected"));
-        opt.classList.add("selected");
-        periodoSelected.textContent = opt.dataset.value;
-        periodoDrop.style.display = "none";
-    });
-});
-
-btnCalendario.addEventListener("click", () => {
-    calendarInput.focus();
-    calendarInput.click();
-});
-
-calendarInput.addEventListener("change", () => {
-    const date = new Date(calendarInput.value);
-    if(date.toString() !== "Invalid Date"){
-        const day = String(date.getDate()).padStart(2,'0');
-        const month = String(date.getMonth()+1).padStart(2,'0');
-        const year = date.getFullYear();
-        periodoSelected.textContent = `${day}/${month}/${year}`;
-        options.forEach(o => o.classList.remove("selected"));
-        periodoDrop.style.display = "none";
-    }
-});
-
-// Gráfico
 const dataValues = [4000, 2400];
 const dataLabels = ['M-Pesa','E-Mola'];
 const total = dataValues.reduce((a,b)=>a+b,0);
@@ -264,7 +195,7 @@ const doughnutChart = new Chart(ctx, {
     }
 });
 
-// Legendinhas clicáveis
+// Clicar nas legendas para mostrar/ocultar fatias
 document.querySelectorAll('.legend-item').forEach(item=>{
   item.addEventListener('click',()=>{
     const index = item.dataset.index;
