--- a/index.html
+++ b/index.html
@@ -3,289 +3,260 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard Separado</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+<title>Dashboard Compacto</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
+:root{
+  --card-bg:#fff;
+  --muted:#6b7280;
+  --shadow:0 6px 20px rgba(15,23,42,0.1);
+  font-family:'Inter', sans-serif;
+}
+
 body{
   margin:0;
   padding:20px;
   background:#f3f4f6;
-  font-family:'Inter', sans-serif;
-  color:#0f172a;
   display:flex;
   flex-direction:column;
   align-items:center;
-  gap:20px;
+  font-size:14px;
+  color:#0f172a;
+  gap:16px;
 }
 
 /* Cards */
-.card{
-    border-radius:10px;
-    background:#fff;
-    box-shadow:0 6px 20px rgba(15,23,42,0.1);
-    padding:16px;
-    width:100%;
-    max-width:285px;
-    display:flex;
-    flex-direction:column;
-    gap:8px;
-}
-
-/* Título do dashboard */
-.titulo-dashboard{
-    font-weight:700;
-    font-size:18px;
-    margin-bottom:8px;
-    text-align:center;
-}
-
-/* Seções métricas */
-.secao {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    gap:8px;
-}
-.secao-icon{ font-size:35px; }
-.titulo{ font-weight:bold; font-size:13px; }
-.valor{ font-size:15px; }
-
-/* Cores por seção */
-.faturamento{ color:#228B22; }
-.vendas{ color:#007bff; }
-.conversao{ color:#FFA500; }
-.ticket{ color:#8A2BE2; }
-
-/* Linha separadora */
-.hr-separator{
-    border:none;
-    border-top:1px solid #e2e8f0;
-    margin:8px 0;
-}
-
-/* Gráfico */
-.chart-card{
+.card, .chart-card{
+  background:var(--card-bg);
   border-radius:10px;
-  background:#fff;
-  box-shadow:0 6px 20px rgba(15,23,42,0.1);
   padding:16px;
+  box-shadow:var(--shadow);
   width:100%;
-  max-width:380px;
-  display:flex;
-  flex-direction:column;
-  gap:8px;
+  max-width:280px;
+  margin-top:10px;
 }
-.chart-wrap{
-    width:100%;
-    height:180px;
-    position:relative;
-}
-.center-total{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    text-align:center;
-    pointer-events:none;
-}
-.center-total .label{ color:#6b7280; font-size:11px; }
-.center-total .num{ font-weight:700; font-size:14px; margin-top:2px; }
 
-.legend-row{
-    display:flex;
-    gap:12px;
-    justify-content:center;
-    margin-top:6px;
+/* Títulos */
+.titulo-dashboard{
+  font-weight:700;
+  font-size:18px;
+  margin-bottom:8px;
+  text-align:center;
 }
-.legend-item{
-    display:flex;
-    gap:6px;
-    align-items:center;
-    font-size:12px;
-    color:#6b7280;
-    cursor:pointer;
+
+/* Botão Período */
+#periodoWrapper {
+  position:relative; 
+  width:160px; 
+  margin:0 auto 12px;
 }
-.legend-swatch{
-    width:10px;
-    height:10px;
-    border-radius:2px;
-}
-  .periodo-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 12px; /* espaço entre período e primeiras seções */
-    position: relative;
-    width: 100%;
+
+.label-wrapper {
+  position:absolute;
+  top:-10px;
+  left:50%;
+  transform:translateX(-50%);
+  background:#fff;
+  padding:0 6px;
+  font-size:12px;
+  color:#6b7280;
+  font-weight:600;
+  z-index:2;
 }
 
 #btnPeriodo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #ccc;
-    background: #f9f9f9;
-    border-radius: 8px;
-    padding: 8px 12px;
-    cursor: pointer;
-    width: 100%;
-}
-
-#btnPeriodo .arrow {
-    font-size: 12px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border:1px solid #ccc;
+  border-radius:8px;
+  padding:8px 12px;
+  background:#f9f9f9;
+  cursor:pointer;
+  position:relative;
+  z-index:1;
 }
 
 #periodoDrop {
-    display: none; /* inicialmente escondido */
-    flex-direction: column;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background: #fff;
-    padding: 8px 0;
-    position: absolute;
-    top: 40px; /* abaixo do botão */
-    left: 0;
-    width: 100%;
-    z-index: 10;
+  display:none;
+  flex-direction:column;
+  border:1px solid #ccc;
+  background:#fff;
+  border-radius:8px;
+  margin-top:4px;
+  width:160px;
+  position:absolute;
+  top:100%;
+  left:50%;
+  transform:translateX(-50%);
+  z-index:5;
+  box-shadow:0 4px 8px rgba(0,0,0,0.1);
 }
 
-#periodoDrop .option {
-    padding: 6px 12px;
-    cursor: pointer;
-    font-size: 13px;
+.option{
+  padding:6px 10px;
+  cursor:pointer;
 }
 
-#periodoDrop .option:hover,
-#periodoDrop .option.selected {
-    background-color: #f0f0f0;
+.option.selected{
+  background:#f3f4f6;
 }
 
-#btnCalendario {
-    padding: 6px 12px;
-    cursor: pointer;
-    font-size: 13px;
-    text-align: center;
-    border-top: 1px solid #eee;
+/* Esconde input date */
+#calendarInput { 
+    position: absolute; 
+    left: -9999px; 
 }
 
-#calendarInput {
-    position: absolute;
-    left: -9999px;
+/* Seções verticais */
+.secao {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+  width: 100%;
+  margin-bottom:8px;
+}
+
+.secao-icon { font-size: 30px; }
+
+.titulo { font-weight: bold; font-size: 14px; text-align: center; }
+.valor { font-size: 17px; font-weight: normal; text-align: center; }
+
+.faturamento { color: #228B22; }
+.vendas { color: #007bff; }
+.conversao { color: #FFA500; }
+.ticket { color: #8A2BE2; }
+
+/* Gráfico */
+.chart-card .chart-wrap{
+  width:100%;
+  height:180px;
+  position:relative;
+}
+
+.center-total{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  text-align:center;
+  pointer-events:none;
+}
+
+.center-total .label{
+  color:var(--muted);
+  font-size:12px;
+}
+
+.center-total .num{
+  font-weight:700;
+  font-size:16px;
+  margin-top:4px;
+}
+
+.legend-row{
+  display:flex;
+  gap:12px;
+  justify-content:center;
+  margin-top:6px;
+}
+
+.legend-item{
+  display:flex;
+  gap:6px;
+  align-items:center;
+  font-size:12px;
+  color:var(--muted);
+  cursor:pointer;
+}
+
+.legend-swatch{
+  width:10px;
+  height:10px;
+  border-radius:2px;
 }
 </style>
 </head>
 <body>
 
-<div class="titulo-dashboard">Dashboard Métricas</div>
+<div class="titulo-dashboard">Dashboard</div>
 
-
-<!-- Div Período - colocar dentro do card, acima das seções -->
-<div class="periodo-container">
-    <div id="btnPeriodo">
-        <span id="periodoSelected">Hoje</span>
-        <i class="bi bi-chevron-down arrow"></i>
-    </div>
-
-    <div id="periodoDrop">
-        <div class="option selected" data-value="Hoje">Hoje</div>
-        <div class="option" data-value="Ontem">Ontem</div>
-        <div class="option" data-value="Últimos 7 dias">Últimos 7 dias</div>
-        <div class="option" data-value="Últimos 30 dias">Últimos 30 dias</div>
-        <div id="btnCalendario">Calendário</div>
-        <input type="date" id="calendarInput">
-    </div>
-
+<!-- Card de Métricas -->
 <div class="card">
-   <div class="secao">
-        <i class="bi bi-cash-coin secao-icon"></i>
-        <div class="titulo">Faturamento</div>
-        <div class="valor faturamento">100 MZN</div>
-    </div>
-    <div class="secao">
-        <i class="bi bi-cart-check-fill secao-icon"></i>
-        <div class="titulo">Vendas Realizadas</div>
-        <div class="valor vendas">50</div>
-    </div>
-    <div class="secao">
-        <i class="bi bi-graph-up secao-icon"></i>
-        <div class="titulo">Taxa de Conversão</div>
-        <div class="valor conversao">6%</div>
-    </div>
-    <div class="secao">
-        <i class="bi bi-receipt secao-icon"></i>
-        <div class="titulo">Ticket Médio</div>
-        <div class="valor ticket">2 MZN</div>
-    </div>
+
+  <!-- Botão Período -->
+  <div id="periodoWrapper">
+      <div class="label-wrapper">Período</div>
+      <div id="btnPeriodo">
+          <span id="periodoSelected">Hoje</span>
+          <i class="bi bi-chevron-down arrow"></i>
+      </div>
+      <div id="periodoDrop">
+          <div class="option selected" data-value="Hoje">Hoje</div>
+          <div class="option" data-value="Ontem">Ontem</div>
+          <div class="option" data-value="Últimos 7 dias">Últimos 7 dias</div>
+          <div class="option" data-value="Últimos 30 dias">Últimos 30 dias</div>
+          <div id="btnCalendario" class="option">Calendário</div>
+          <input type="date" id="calendarInput">
+      </div>
+  </div>
+
+  <!-- Seções -->
+  <div class="secao">
+      <i class="bi bi-cash-coin secao-icon"></i>
+      <div class="titulo">Faturamento</div>
+      <div class="valor faturamento">100 MZN</div>
+  </div>
+
+  <div class="secao">
+      <i class="bi bi-cart-check-fill secao-icon"></i>
+      <div class="titulo">Vendas Realizadas</div>
+      <div class="valor vendas">50</div>
+  </div>
+
+  <div class="secao">
+      <i class="bi bi-graph-up secao-icon"></i>
+      <div class="titulo">Taxa de Conversão</div>
+      <div class="valor conversao">6%</div>
+  </div>
+
+  <div class="secao">
+      <i class="bi bi-receipt secao-icon"></i>
+      <div class="titulo">Ticket Médio</div>
+      <div class="valor ticket">2 MZN</div>
+  </div>
 </div>
 
-<!-- DIV GRÁFICO -->
+<!-- Card Gráfico -->
 <div class="chart-card">
-    <div class="titulo-dashboard">Gráfico de Vendas</div>
+  <div class="chart-title">Gráfico de Vendas</div>
 
-    <div class="chart-wrap">
-        <canvas id="doughnutChart"></canvas>
-        <div class="center-total">
-            <div class="label">TOTAL</div>
-            <div class="num" id="centerValue">0 MT</div>
-            <div style="font-size:11px;color:#6b7280;margin-top:2px;">M-Pesa + E-Mola</div>
-        </div>
-    </div>
+  <div class="chart-wrap">
+    <canvas id="doughnutChart"></canvas>
 
-    <div class="legend-row">
-        <div class="legend-item" data-index="0"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
-        <div class="legend-item" data-index="1"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
+    <div class="center-total">
+      <div class="label">TOTAL</div>
+      <div class="num" id="centerValue">0 MT</div>
+      <div style="font-size:11px;color:var(--muted);margin-top:4px;">M-Pesa + E-Mola</div>
     </div>
+  </div>
+
+  <div class="legend-row">
+    <div class="legend-item" data-index="0"><div class="legend-swatch" style="background:#FF4136"></div>M-Pesa</div>
+    <div class="legend-item" data-index="1"><div class="legend-swatch" style="background:#FFA500"></div>E-Mola</div>
+  </div>
 </div>
 
 <script>
-const dataValues = [4000, 2400];
-const dataLabels = ['M-Pesa','E-Mola'];
-const total = dataValues.reduce((a,b)=>a+b,0);
-document.getElementById('centerValue').textContent = total+' MT';
+const fmt = n => new Intl.NumberFormat('pt-MZ').format(Math.round(n));
 
-const ctx = document.getElementById('doughnutChart').getContext('2d');
-const doughnutChart = new Chart(ctx, {
-    type:'doughnut',
-    data:{
-        labels:dataLabels,
-        datasets:[{
-            data:dataValues,
-            backgroundColor:['#FF4136','#FFA500']
-        }]
-    },
-    options:{
-        cutout:'62%',
-        plugins:{
-            legend:{ display:false },
-            tooltip:{
-                callbacks:{
-                    label: function(context){
-                        const val = context.raw;
-                        const pct = ((val/total)*100).toFixed(1);
-                        return `${context.label}: ${val} MT (${pct}%)`;
-                    }
-                }
-            }
-        },
-        maintainAspectRatio:false
-    }
-});
-
-// Clicar nas legendas para mostrar/ocultar fatias
-document.querySelectorAll('.legend-item').forEach(item=>{
-  item.addEventListener('click',()=>{
-    const index = item.dataset.index;
-    const meta = doughnutChart.getDatasetMeta(0).data[index];
-    meta.hidden = !meta.hidden;
-    doughnutChart.update();
-  });
-});
-
-  const btnPeriodo = document.getElementById("btnPeriodo");
+// Dropdown Período
+const btnPeriodo = document.getElementById("btnPeriodo");
 const periodoDrop = document.getElementById("periodoDrop");
-const options = periodoDrop.querySelectorAll(".option");
+const options = document.querySelectorAll(".option");
 const periodoSelected = document.getElementById("periodoSelected");
 const btnCalendario = document.getElementById("btnCalendario");
 const calendarInput = document.getElementById("calendarInput");
@@ -296,10 +267,12 @@ btnPeriodo.addEventListener("click", () => {
 
 options.forEach(opt => {
     opt.addEventListener("click", () => {
-        options.forEach(o => o.classList.remove("selected"));
-        opt.classList.add("selected");
-        periodoSelected.textContent = opt.dataset.value;
-        periodoDrop.style.display = "none";
+        if(opt.id !== "btnCalendario"){
+            options.forEach(o => o.classList.remove("selected"));
+            opt.classList.add("selected");
+            periodoSelected.textContent = opt.dataset.value;
+            periodoDrop.style.display = "none";
+        }
     });
 });
 
@@ -318,6 +291,40 @@ calendarInput.addEventListener("change", () => {
         options.forEach(o => o.classList.remove("selected"));
         periodoDrop.style.display = "none";
     }
+});
+
+// Gráfico
+const mpesa = 4000;
+const emola = 2400;
+const total = mpesa + emola;
+document.getElementById('centerValue').textContent = fmt(total)+' MT';
+
+const ctx = document.getElementById('doughnutChart').getContext('2d');
+const doughnutChart = new Chart(ctx, {
+  type:'doughnut',
+  data:{
+    labels:['M-Pesa','E-Mola'],
+    datasets:[{
+      data:[mpesa, emola],
+      backgroundColor:['#FF4136','#FFA500']
+    }]
+  },
+  options:{
+    cutout:'62%',
+    plugins:{ legend:{ display:false } },
+    maintainAspectRatio:false
+  }
+});
+
+// Toggle visibilidade clicando na legenda
+const legendItems = document.querySelectorAll('.legend-item');
+legendItems.forEach(item => {
+  item.addEventListener('click', () => {
+    const idx = item.dataset.index;
+    const meta = doughnutChart.getDatasetMeta(0);
+    meta.data[idx].hidden = !meta.data[idx].hidden;
+    doughnutChart.update();
+  });
 });
 </script>
 
