--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ body{
 .titulo-dashboard{
   font-weight:700;
   font-size:18px;
-  margin-bottom:8px;
-  text-align:center;
+  margin-bottom:2px;
+  text-align:left;
 }
 
 /* Botão Período */
